--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,12 @@ body{
 .red{
   background-color: red;
 }
+.modal-container{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+}
+
