--- a/css/style.css
+++ b/css/style.css
@@ -23,5 +23,11 @@ body{
   bottom: 0;
   left: 0;
   opacity: 0;
+  z-index: -1;
+}
+
+.modal-is-open .modal-container{
+  opacity: 1;
+  z-index: 1;
 }
 
